kubernetes/deployment_spec_auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: fishapp
    service: auth
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: fishapp
spec:
  selector:
    matchLabels:
      app: fishapp
      service: auth
  template:
    metadata:
      labels:
        app: fishapp
        service: auth
    spec:
      volumes:
        - name: jwt-pubkey-volume
          persistentVolumeClaim:
            claimName: jwt-pubkey-pvc
      containers:
        - name: auth-container
          volumeMounts:
            - mountPath: /aplication_storage/token_key
              name: jwt-pubkey-volume
          imagePullPolicy: Always
          image: localhost:32000/fishapp-auth:latest
          ports:
            - containerPort: 9080
            - containerPort: 9443
          readinessProbe: # todo:change to prod values
            httpGet:
              path: /health/ready
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe: # todo:change to prod values
            httpGet:
              path: /health/live
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
