kubernetes/deployment_spec_media.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: fishapp
    service: media
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  labels:
    app: fishapp
spec:
  selector:
    matchLabels:
      app: fishapp
      service: media
  template:
    metadata:
      labels:
        app: fishapp
        service: media
    spec:
      volumes:
        - name: image-storage-volume
          persistentVolumeClaim:
            claimName: image-storage-pvc
      containers:
        - name: auth-media
          volumeMounts:
            - mountPath: /aplication_storage/images
              name: image-storage-volume
          imagePullPolicy: Always
          image: localhost:32000/fishapp-media:latest
          ports:
            - containerPort: 9080
            - containerPort: 9443
          readinessProbe: # todo:change to prod values
            httpGet:
              path: /health/ready
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe: # todo:change to prod values
            httpGet:
              path: /health/live
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
