kubernetes/deployment_spec_user.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: fishapp
    service: user
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 9443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: fishapp
spec:
  selector:
    matchLabels:
      app: fishapp
      service: user
  template:
    metadata:
      labels:
        app: fishapp
        service: user
    spec:
      containers:
        - name: auth-user
          imagePullPolicy: Always
          image: localhost:32000/fishapp-user:latest
          ports:
            - containerPort: 9080
            - containerPort: 9443
          readinessProbe: # todo:change to prod values
            httpGet:
              path: /health/ready
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe: # todo:change to prod values
            httpGet:
              path: /health/live
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5
