kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fishapp-ingress
  labels:
    app: fishapp
  annotations:
    #    cert-manager.io/issuer: "letsencrypt-staging"
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - secretName: fishapp-tls-cert
      hosts:
        - pc-1.uials.no
  rules:
    - host: pc-1.uials.no
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api/media
            pathType: Prefix
            backend:
              service:
                name: media-service
                port:
                  number: 80
          - path: /api/store
            pathType: Prefix
            backend:
              service:
                name: store-service
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/checkout
            pathType: Prefix
            backend:
              service:
                name: checkout-service
                port:
                  number: 80
